# Rete-Neurale-GUI

./: .gitignore  README.md  rete_MLP_5_liv.txt  rete_neurale.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  rete_neurale.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/rete_neurale_mlp/: rete_neurale.rs
src/assets/: test.json
src/components/: addestra.js  attivita.js  attività.js  crea-rete.js  esegui.js  rete-neurale.js  sfondo.js
